// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> snapshots rendered with all props 1`] = `
<img
  alt="Pork & Cabbage Tacos"
  className="snapW-Image my-Image"
  src="/image.png"
  width="80%"
/>
`;

exports[`<Image /> snapshots rendered with required props 1`] = `
<img
  alt="Pork & Cabbage Tacos"
  className="snapW-Image"
  src="/image.png"
  width="100%"
/>
`;
